# LC-Project

./: LC_Daily_Summary.xlsm  Trade_Finance_Main.xlsm  filter.ipynb  main.py  pyproject.toml
