[project]
name = "lc-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.5.1",
    "ipykernel>=7.3.0",
    "isort>=8.0.1",
    "jupyter>=1.1.1",
    "numpy>=2.5.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "ruff>=0.15.19",
    "streamlit>=1.58.0",
]
